# culpeo-stream

./: .gitignore  README.md
.devcontainer/: devcontainer-lock.json  devcontainer.json  post-create.sh
.github/agents/: cpp.agent.md  csharp.agent.md  security.agent.md  typescript.agent.md
implementations/cpp/: CMakeLists.txt  DECISIONS.md
implementations/cpp/culpeostream-py/: CMakeLists.txt  README.md  culpeostream.pyi  pyproject.toml
implementations/cpp/culpeostream-py/src/: bindings.cpp
implementations/cpp/culpeostream-py/tests/: test_basic.py
implementations/cpp/libculpeo-frame/: CMakeLists.txt
implementations/cpp/libculpeo-frame/fuzz/: frame_parser_fuzz.cpp
implementations/cpp/libculpeo-frame/include/culpeo/: frame.hpp
implementations/cpp/libculpeo-frame/src/: frame.cpp
implementations/cpp/libculpeo-frame/tests/: frame_tests.cpp
implementations/cpp/libculpeo-message/: CMakeLists.txt
implementations/cpp/libculpeo-message/fuzz/: message_parser_fuzz.cpp
implementations/cpp/libculpeo-message/fuzz/corpus/: header_value_crlf_injection  null_byte_in_header_name  null_byte_in_header_value  overlength_header_block  too_many_headers  truncated_no_terminator  valid_control_frame
implementations/cpp/libculpeo-message/include/culpeo/: c_api.h  message.hpp
implementations/cpp/libculpeo-message/src/: c_api.cpp  message.cpp
implementations/cpp/libculpeo-message/tests/: message_tests.cpp
implementations/cpp/libculpeo-session/: CMakeLists.txt
implementations/cpp/libculpeo-session/include/culpeo/: session.hpp
implementations/cpp/libculpeo-session/src/: auth_refresh.cpp  auth_refresh.hpp  crypto.hpp  offset_tracker.cpp  offset_tracker.hpp  session.cpp  stream_registry.cpp  stream_registry.hpp
implementations/cpp/libculpeo-session/tests/: offset_tracker_tests.cpp  session_tests.cpp  stream_registry_tests.cpp
implementations/cpp/libculpeo-transport-h2/: CMakeLists.txt
implementations/cpp/libculpeo-transport-h2/include/culpeo/: async_transport.hpp  h2_client.hpp  h2_server.hpp  h2_transport.hpp
implementations/cpp/libculpeo-transport-h2/src/: h2_client.cpp  h2_server.cpp  h2_session.hpp  h2_transport.cpp
implementations/cpp/libculpeo-transport-h2/tests/: h2_transport_tests.cpp  test_cert.pem  test_key.pem
implementations/cpp/libculpeo-transport-ws/: CMakeLists.txt
implementations/cpp/libculpeo-transport-ws/include/culpeo/: transport_ws.hpp  uws_adapter.hpp
implementations/cpp/libculpeo-transport-ws/src/: transport_ws.cpp
implementations/cpp/libculpeo-transport-ws/tests/: transport_ws_tests.cpp
implementations/csharp/: CulpeoStream.slnx  DECISIONS.md
implementations/typescript/: DECISIONS.md
review/findings/: 2026-05-30-cpp-content-type-case-sensitivity.md  2026-05-30-cpp-dead-code-stream-snapshot.md  2026-05-30-cpp-p3-incomplete-close-code-mapping.md  2026-05-30-cpp-p3-itransport-lifetime-undocumented.md  2026-05-30-cpp-p3-transport-callback-exception.md  2026-05-30-cpp-p3-uws-defer-use-after-free.md  2026-05-30-cpp-pcm-param-validation.md  2026-05-30-csharp-p3-concurrent-connectasync.md  2026-05-30-csharp-p3-sendoffset-unsynchronized.md  2026-05-30-csharp-p3-unbounded-channel.md  2026-05-30-csharp-p3-ws-dispose-race.md  2026-05-30-ts-missing-return-after-failwithclose.md  2026-05-30-ts-p3-handler-errors-silent.md  2026-05-30-ts-p3-server-ws-listener-leak.md  2026-05-30-ts-p3-session-store-lru.md  2026-05-30-ts-pcm-offset-channels.md  2026-05-30-ts-websocket-listener-leak.md  2026-06-04-cpp-p5-auth-validate-mutex-deadlock.md  2026-06-04-cpp-p5-callback-throws-through-noexcept.md  2026-06-04-cpp-p5-capi-error-code-doc-mismatch.md  2026-06-04-cpp-p5-capi-null-body-ub-span.md  2026-06-04-cpp-p5-capi-size-truncation.md  2026-06-04-cpp-p5-server-transport-dangling-ptr.md  2026-06-04-csharp-p5-aot-publish-test-deadlock.md  2026-06-04-csharp-p5-aot-test-no-exitcode-check.md  2026-06-04-csharp-p5-client-reflection-json.md  2026-06-04-csharp-p5-culpeo002-fqn-check.md  2026-06-04-csharp-p5-diagnosticinfo-messageargs-equality.md  2026-06-04-csharp-p5-generated-dispatch-unreachable-protocol-events.md  2026-06-04-csharp-p5-handlemedia-dispatch-never-matches.md  2026-06-04-csharp-p5-missing-trimmerroots-xml.md  2026-06-04-csharp-p5-safemethodsuffix-collision.md  2026-06-04-ts-p5-client-receive-void.md  2026-06-04-ts-p5-client-start-exception.md  2026-06-04-ts-p5-server-double-snapshot.md  2026-06-04-ts-p5-ts-fallback-dead-min.md  2026-06-04-ts-p5-wasm-serialize-memory-leak.md
security/: DECISIONS.md  required-security-tests.md  threat-model.md
security/findings/: 2026-05-28-cpp-missing-header-count-limit.md  2026-05-28-cpp-no-fuzzer-corpus.md  2026-05-28-cpp-null-byte-in-header-values.md  2026-05-28-cpp-parselimits-overflow.md  2026-05-28-ping-rate-limit-behavior-mismatch.md  2026-05-28-serializer-no-header-validation.md  2026-05-28-ts-no-exhaustiveness-check.md  2026-05-30-cpp-missing-content-type-required.md  2026-05-30-cpp-ping-ts-forgeable-rtt.md  2026-05-30-cpp-random-device-vs-claimed-rand-bytes.md  2026-05-30-csharp-issued-nonces-leak.md  2026-05-30-csharp-no-auth-validation-hook.md  2026-05-30-csharp-no-authrefresh-interval-enforcement.md  2026-05-30-csharp-nonce-non-constant-time.md  2026-05-30-csharp-rate-limiter-proxy-bypass.md  2026-05-30-csharp-timestamp-reset-on-resumption.md  2026-05-30-csharp-unbounded-message-accumulation.md  2026-05-31-cpp-close-reason-length-unchecked.md  2026-05-31-csharp-resume-offset-no-bounds-check.md  2026-05-31-csharp-static-token-reused-on-reconnect.md  2026-05-31-ts-auth-refresh-no-rate-limit.md  2026-05-31-ts-session-resume-no-ownership-check.md  2026-05-31-ts-session-store-fifo-eviction-dos.md  2026-06-01-all-unknown-type-octet-not-rejected.md  2026-06-01-cpp-envelope-payload-size-overflow.md  2026-06-01-cpp-no-max-concurrent-streams.md  2026-06-01-cpp-no-tls-handshake-timeout.md  2026-06-01-cpp-server-ignores-request-headers.md  2026-06-01-cpp-tls-verify-none-hardcoded.md  2026-06-01-csharp-cleartext-switch-no-warning.md  2026-06-01-csharp-frame-reader-signed-cast-bypass.md  (+9 more)
spec/: culpeostream-spec.md
(+56 files in other folders)
